Moving js and css to separate files

--- a/WebClient/views/layout.erb
+++ b/WebClient/views/layout.erb
@@ -9,6 +9,8 @@
 
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.47/css/bootstrap-datetimepicker.min.css" integrity="sha256-yMjaV542P+q1RnH6XByCPDfUFhmOafWbeLPmqKh11zo=" crossorigin="anonymous">
 
+		<link rel="stylesheet" href="app.css">		
+
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
@@ -21,6 +23,8 @@
 	    <script src="https://www.gstatic.com/charts/loader.js"></script>
 	    <!-- <script src="highcharts.js"></script> -->
 	    <script src="https://cdnjs.cloudflare.com/ajax/libs/chartkick/2.2.4/chartkick.min.js" integrity="sha256-F8U6ZDLlFJLObmph3Y1s809TyZ6eJ9oUf3WjYmTdHEU=" crossorigin="anonymous"></script>
+
+	    <script src="app.js"></script>
 
 	</head>
 	<body>
