--- a/WebClient/views/pow.erb
+++ b/WebClient/views/pow.erb
@@ -23,7 +23,7 @@
 					  </label>
 				</div>
 				<div class="container">
-				    <div class='col-md-5'>
+				    <div class='col-sm-5'>
 				        <div class="form-group">
 				            <div class='input-group date' id='startTime'>
 				                <input type='text' class="form-control" name='startTime' value='<%= params[:startTime] %>'>
@@ -33,7 +33,7 @@
 				            </div>
 				        </div>
 				    </div>
-				    <div class='col-md-5'>
+				    <div class='col-sm-5'>
 				        <div class="form-group">
 				            <div class='input-group date' id='endTime'>
 				                <input type='text' class="form-control" name='endTime' value='<%= params[:endTime] %>'>
@@ -51,6 +51,19 @@
 </div>
 
 <div class="panel panel-default">	
-	<div class="panel-heading">Set the power alarm</div>
+	<div class="panel-heading">Power alarm</div>
 	<div class="panel-body">
+		<form class="form-inline">
+			<div class="form-group">
+			<input type="checkbox" data-toggle="toggle" data-onstyle="danger">
+			</div>
+		  <div class="form-group">
+		    <div class="input-group">
+		      <input type="number" class="form-control" id="exampleInputAmount">
+		      <div class="input-group-addon">W</div>
+		    </div>
+		  </div>
+		  <button type="submit" class="btn btn-danger">Set alarm</button>
+		</form>
+	</div>
 </div>		
