--- a/WebClient/views/pow.erb
+++ b/WebClient/views/pow.erb
@@ -53,13 +53,13 @@
 <div class="panel panel-default">	
 	<div class="panel-heading">Power alarm</div>
 	<div class="panel-body">
-		<form class="form-inline">
+		<form class="form-inline" method='post'>
 			<div class="form-group">
-			<input type="checkbox" data-toggle="toggle" data-onstyle="danger">
+			<input type="checkbox" name = "alarmOn" data-toggle="toggle" data-onstyle="danger" <%= @alarm_on == 1 ? 'checked' : '' %> >
 			</div>
 		  <div class="form-group">
 		    <div class="input-group">
-		      <input type="number" class="form-control" id="exampleInputAmount">
+		      <input type="number" class="form-control" id="inputAlarmPower" name="alarmPower" value='<%= @alarm_power %>'>
 		      <div class="input-group-addon">W</div>
 		    </div>
 		  </div>
