Fix of Rubocop offences

--- a/WebClient/views/pow.erb
+++ b/WebClient/views/pow.erb
@@ -1,5 +1,5 @@
 <div class="panel panel-default">	
-	<div class="panel-heading">Power consumption <%= @chartHeader %></div>
+	<div class="panel-heading">Power consumption <%= @chart_header %></div>
 	<div class="panel-body">
 		<div class='row'>
 			<div class='col'>
