--- a/WebClient/views/pow.erb
+++ b/WebClient/views/pow.erb
@@ -8,7 +8,6 @@
 		</div>
 		<br>
 		<form>
-		<!-- <form method='post'> -->
 			<div class='form-group'>
 				<div class="radio">
 			  		<label>
@@ -55,7 +54,7 @@
 	<div class="panel-body">
 		<form class="form-inline" method='post'>
 			<div class="form-group">
-			<input type="checkbox" name = "alarmOn" data-toggle="toggle" data-onstyle="danger" <%= @alarm_on == 1 ? 'checked' : '' %> >
+			<input type="checkbox" name = "alarmOn" data-toggle="toggle" data-onstyle="danger" <%= @alarm_on ? 'checked' : '' %> >
 			</div>
 		  <div class="form-group">
 		    <div class="input-group">
