--- a/WebClient/views/pow.erb
+++ b/WebClient/views/pow.erb
@@ -1,3 +1,4 @@
+<!-- График потребления электроэнергии -->
 <div class="panel panel-default">	
 	<div class="panel-heading">Power consumption <%= @chart_header %></div>
 	<div class="panel-body">
@@ -48,7 +49,7 @@
 		</form>
 	</div>
 </div>
-
+<!-- Установка параметровы сигнализации по превышению мощности -->
 <div class="panel panel-default">	
 	<div class="panel-heading">Power alarm</div>
 	<div class="panel-body">
