--- a/WebClient/views/layout.erb
+++ b/WebClient/views/layout.erb
@@ -4,37 +4,38 @@
 		<!-- заголовок сайта -->
 		<title>POW WEB</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<!-- подключаем Bootstrap -->
+
+		<!-- подключаем стили -->
+		<!-- bootstrap -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
+		<!-- datetimepicker -->
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.47/css/bootstrap-datetimepicker.min.css" integrity="sha256-yMjaV542P+q1RnH6XByCPDfUFhmOafWbeLPmqKh11zo=" crossorigin="anonymous">
-
+		<!-- toggle -->
 		<link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
+		<!-- прочие стили -->
+		<link href="app.css" rel="stylesheet" >		
 
-		<link rel="stylesheet" href="app.css">		
-
+		<!-- подключаем JS -->
+		<!-- jquery и bootstrap-->
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-
+		<!-- moment js и datetimepicker -->
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.18.1/moment-with-locales.min.js" integrity="sha256-/ioiJhI6NkoUDkSyBru7JZUGXGQhdml6amBC3ApTf5A=" crossorigin="anonymous"></script>
-		
 		<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.47/js/bootstrap-datetimepicker.min.js"></script>
-
+		<!-- toggle -->
 		<script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
-
-	    <!-- подключение библиотек для рисования графиков -->
-	    <script src="https://www.gstatic.com/charts/loader.js"></script>
+	    <!-- библиотеки для рисования графиков и chartkick -->
 	    <!-- <script src="highcharts.js"></script> -->
+	    <script src="https://www.gstatic.com/charts/loader.js"></script>
 	    <script src="https://cdnjs.cloudflare.com/ajax/libs/chartkick/2.2.4/chartkick.min.js" integrity="sha256-F8U6ZDLlFJLObmph3Y1s809TyZ6eJ9oUf3WjYmTdHEU=" crossorigin="anonymous"></script>
-
+	   	<!-- прочий JS -->
 	    <script src="app.js"></script>
 
 	</head>
 	<body>
 		<div class="container">
 
-			<!-- Наша менюшка  -->
+			<!-- Меню  -->
 			<nav class="navbar navbar-default" style="background-color: #e3f2fd;">
   				<a class="navbar-brand" href="/">Sonoff POW data registration</a>
 			</nav>
