--- a/WebClient/views/layout.erb
+++ b/WebClient/views/layout.erb
@@ -25,8 +25,9 @@
 		<!-- toggle -->
 		<script src="https://gitcdn.github.io/bootstrap-toggle/2.2.2/js/bootstrap-toggle.min.js"></script>
 	    <!-- библиотеки для рисования графиков и chartkick -->
-	    <!-- <script src="highcharts.js"></script> -->
-	    <script src="https://www.gstatic.com/charts/loader.js"></script>
+	    <script src="https://cdnjs.cloudflare.com/ajax/libs/highcharts/6.0.3/highcharts.js" integrity="sha256-cq98nXY3wbmZ1E1Qk1ZdM6w9qwRGA9YuW3BXP+PtG4s=" crossorigin="anonymous"></script>
+	    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.js" integrity="sha256-t3+U9BqykoMN9cqZmJ5Z53TvPv4V7S9AmjUcIWNNyxo=" crossorigin="anonymous"></script> -->
+	    <!-- <script src="https://www.gstatic.com/charts/loader.js"></script> -->
 	    <script src="https://cdnjs.cloudflare.com/ajax/libs/chartkick/2.2.4/chartkick.min.js" integrity="sha256-F8U6ZDLlFJLObmph3Y1s809TyZ6eJ9oUf3WjYmTdHEU=" crossorigin="anonymous"></script>
 	   	<!-- прочий JS -->
 	    <script src="app.js"></script>
