--- a/WebClient/views/layout.erb
+++ b/WebClient/views/layout.erb
@@ -5,14 +5,14 @@
 		<title>POW WEB</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-		<!-- подключаем стили -->
+		<!-- подключаем CSS -->
 		<!-- bootstrap -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
 		<!-- datetimepicker -->
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.47/css/bootstrap-datetimepicker.min.css" integrity="sha256-yMjaV542P+q1RnH6XByCPDfUFhmOafWbeLPmqKh11zo=" crossorigin="anonymous">
 		<!-- toggle -->
 		<link href="https://gitcdn.github.io/bootstrap-toggle/2.2.2/css/bootstrap-toggle.min.css" rel="stylesheet">
-		<!-- прочие стили -->
+		<!-- прочее -->
 		<link href="app.css" rel="stylesheet" >		
 
 		<!-- подключаем JS -->
@@ -29,7 +29,7 @@
 	    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.js" integrity="sha256-t3+U9BqykoMN9cqZmJ5Z53TvPv4V7S9AmjUcIWNNyxo=" crossorigin="anonymous"></script> -->
 	    <!-- <script src="https://www.gstatic.com/charts/loader.js"></script> -->
 	    <script src="https://cdnjs.cloudflare.com/ajax/libs/chartkick/2.2.4/chartkick.min.js" integrity="sha256-F8U6ZDLlFJLObmph3Y1s809TyZ6eJ9oUf3WjYmTdHEU=" crossorigin="anonymous"></script>
-	   	<!-- прочий JS -->
+	   	<!-- прочее -->
 	    <script src="app.js"></script>
 
 	</head>
