--- a/WebClient/views/layout.erb
+++ b/WebClient/views/layout.erb
@@ -43,12 +43,11 @@
 
 			<div>
 				<!-- вывод сообщения об ошибке, если оно существует -->
-			      <%if $error && $error.length > 0 then %>
+			      <%if session[:error] then %>
 			          <div class="alert alert-danger alert-dismissible" role="alert"">
 			          	<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-			          	<%= $error %>
+			          	<%= session[:error] %>
 			          </div>
-			          <% $error = nil %>
 			      <% end %>
 			      <%= yield %>
 			</div>
