--- a/WebClient/views/layout.erb
+++ b/WebClient/views/layout.erb
@@ -43,11 +43,12 @@
 
 			<div>
 				<!-- вывод сообщения об ошибке, если оно существует -->
-			      <%if session[:error] then %>
+			      <% if session[:error] then %>
 			          <div class="alert alert-danger alert-dismissible" role="alert"">
 			          	<button type="button" class="close" data-dismiss="alert" aria-label="Close"><span aria-hidden="true">&times;</span></button>
 			          	<%= session[:error] %>
 			          </div>
+			          <% session.delete(:error) %>
 			      <% end %>
 			      <%= yield %>
 			</div>
